--- a/source/css/login.css
+++ b/source/css/login.css
@@ -1,13 +1,16 @@
+*{
+    font-size: 1rem;
+}
 #content{
     position: absolute;
     top:0px;
     left:0px;
     height: 47rem;
-    width: 94.95rem;
+    width: 100rem;
 }
 #nav{
     position: relative;
-    width:94.95rem;
+    width:100rem;
     height:4.5rem;
     background-color: rgb(237,244,237);
 }
@@ -64,15 +67,31 @@
     height:2.5rem;
     text-decoration: none;
 }
-#login_right #login-title{
+.log_title {
     margin-top: 3rem;
-    margin-left:5rem;
-    width:9rem;
-    border-bottom: 1.5px solid black;
+    width:7.4rem;
+    height: 2.2rem;
     text-align: center;
     font-size: 1.2rem;
-    font-weight: 600;
-    margin-bottom: 1.5rem;
+    font-weight: 500;
+    margin-bottom: 1rem;
+}
+.log_title_color{
+    color: rgb(161,163,161);
+    border-bottom: 1.5px solid rgb(236,236,236);
+}
+.log_title_click{
+    color: black;
+    border-color: black;
+    border: 0 0 2px 0;
+    border-bottom: 2px solid black;
+}
+#regOrlogin{
+    position: relative;
+    display: flex;
+    margin-left: 2rem;
+    cursor:default;
+    
 }
 #login_right input{
     margin-left: 2rem;
@@ -95,7 +114,7 @@
     text-decoration: none;
     color: rgb(155,168,197);
 }
-#login{
+#login,#reg,#next{
     cursor:default;
     text-align: center;
     margin-top: 1rem;
@@ -107,4 +126,23 @@
     font-weight: 600;
     color:white;
     border-radius: 0.3rem;
+}
+#failedOrSuccess{
+    cursor:default;
+    text-align: center;
+    margin-top: 1rem;
+    line-height: 1.8rem;
+    margin-left: 2.3rem;
+    width:14rem;
+    background-color:rgba(255, 0, 0,0);
+    height: 2rem;
+    font-weight: 600;
+    color:white;
+    border-radius: 0.3rem;
+}
+#login_C{
+    display: none;
+}
+#reg_step2{
+    display: none;
 }
