--- a/source/css/index.css
+++ b/source/css/index.css
@@ -1,154 +1,4 @@
 
-#nav {
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  width: 100rem;
-  height: 1.8rem;
-  background-color: rgb(84, 86, 82);
-  font-size: small;
-}
-#nav_left {
-  display: flex;
-  width: 35rem;
-  height: 1.8rem;
-  justify-content: space-around;
-  align-items: center;
-}
-#nav a {
-  color: rgb(213, 213, 213);
-  text-decoration: none;
-}
-#nav a:hover {
-  color: white;
-}
-#nav_right {
-  display: flex;
-  justify-content: space-around;
-  width: 15rem;
-  height: 1.8rem;
-  align-items: center;
-}
-#nav_right a {
-  height: 1.8rem;
-  text-align: center;
-  line-height: 1.8rem;
-}
-#download {
-  position: absolute;
-  z-index: 1;
-  left: 77rem;
-  width: 16rem;
-  height: 30rem;
-  display: none;
-  background-color: white;
-  border: 1px solid rgb(230, 230, 230);
-}
-#tag {
-  position: relative;
-  top: 5rem;
-  left: 4.5rem;
-  width: 7rem;
-  height: 7rem;
-  border-radius: 1.8rem;
-  color: white;
-  line-height: 6rem;
-  text-align: center;
-  font-size: 5rem;
-  font-weight: 600;
-  background-color: rgb(8, 202, 18);
-}
-#tag_L1 {
-  position: relative;
-  top: 6rem;
-  left: 6.5rem;
-  font-size: 1.5rem;
-}
-#tag_img {
-  position: relative;
-  top: 8rem;
-  left: 3rem;
-  width: 10rem;
-}
-#tag_download {
-  position: relative;
-  color: rgb(51, 140, 200);
-  text-decoration: none;
-  font-size: 0.6rem;
-  top: 8.6rem;
-  left: 5rem;
-}
-#nav_2 {
-  position: relative;
-  width: 100rem;
-  height: 8rem;
-  background-color: rgb(240, 243, 245);
-}
-#search {
-  position: relative;
-  width: 44rem;
-  left: 12rem;
-  top: 0.7rem;
-  height: 4rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-#search_logo {
-  color: rgb(37, 141, 205);
-  font-size: 1.8rem;
-  font-weight: 600;
-}
-#search a {
-  text-decoration: none;
-}
-#search_go {
-  display: flex;
-  width: 32rem;
-}
-#search_go1 {
-  border: none;
-  border-radius: 2px;
-  width: 32rem;
-  height: 2rem;
-  box-shadow: 0px 2px rgb(224, 224, 224);
-  outline: none;
-  padding-left: 1rem;
-}
-#search_go2 {
-  height: 2.1rem;
-}
-#nav_3 {
-  display: flex;
-  justify-content: space-around;
-  position: relative;
-  width: 42rem;
-  height: 2rem;
-  top: 1.8rem;
-  left: 12rem;
-}
-#nav_3 a {
-  color: rgb(34, 119, 177);
-  text-decoration: none;
-  font-size: 0.9rem;
-}
-#nav_3 a:hover {
-  background-color: rgb(34, 119, 170);
-  color: white;
-  height: 1.5rem;
-}
-#pic_r {
-  position: relative;
-  left: 60rem;
-  top: -3.4rem;
-  width: 11.5rem;
-}
-#pic_c {
-  position: relative;
-  top: 2.5rem;
-  width: 70rem;
-  left: 12.8rem;
-}
 #content {
   position: relative;
   display: flex;
@@ -157,6 +7,7 @@
   top: 4.5rem;
   left: 12.8rem;
   height: auto;
+  margin-bottom: 8rem;
 }
 #left {
   position: relative;
@@ -164,7 +15,6 @@
   flex-direction: column;
   width: 45rem;
   height: auto;
-  border: 1px solid black;
 }
 #right {
   position: relative;
@@ -175,20 +25,229 @@
 }
 .left_box {
   width: 45rem;
-  border: 1px solid black;
 }
 #left_01 {
   height: 22rem;
+  overflow: hidden;
+}
+#left_01_imgboxs{
+  position: relative;
+  height: 17rem;
+  left:-45rem;
+  background-color: antiquewhite;
+}
+.hotingFilm{
+  position: absolute;
+  width: 7.7rem;
+  height: 17rem;
+}
+.hotingImg{
+  cursor: pointer;
+}
+.hot_mid_film{
+  position: absolute;
+  width: 45rem;
+  height: 17rem;
+  transition:left .5s ease-in-out;
+}
+.hotingFilmName{
+  text-align: center;
+  cursor: pointer;
+  margin-top: 0.6rem;
+  font-size: 0.8rem;
+}
+.hotingFilm>img{
+  height: 10.5rem;
+  width: 7.6rem;
+}
+.hotingStars{
+  margin-left: 1.8rem;
+}
+.hotingBuy{
+  margin-top: 0.3rem;
+  cursor: pointer;
+  padding: 0.2rem 0.9rem 0.2rem 1rem;
+  background-color: rgb(38,141,205);
+  color: white;
+  width:3rem;
+  font-size: 0.5rem;
+  margin-left: 1.5rem ;
+}
+.hover_film_hot{
+  position:absolute;
+  width: 14rem;
+  background-color: white;
+  z-index: 1;
+  padding: 1rem;
+  border: 1px solid rgb(221,221,221);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  font-size: 0.5rem;
+  display: none;
+}
+.hover_filmyears{
+  display: inline-block;
+  font-size: 0.5rem;
+  color:rgb(178,170,178);
+  margin-left: 0.5rem;
+}
+.hover_people{
+  margin-left: 0.5rem;
+}
+.hover_filmname{
+  display: inline-block;
+  font-size: 1rem;
+}
+.filmBigbox{
+  position: relative;
+  width: 44.9rem;
+  height: 15rem;
+}
+.filmMidbox{
+  position: absolute;
+  width: 44.9rem;
+  height: 15rem;
+  transition:left .5s linear;
+}
+.filmbbbbox{
+  position: relative;
+  left:-45rem;
+}
+.filmsSmallbox{
+  position: absolute;
+  width: 7.7rem;
+  font-size: 0.9rem;
+  height: 13rem;
+  cursor: pointer;
+}
+.hover_big_box{
+  background-color: white;
+  
+}
+.hover_topbox{
+  padding: 1rem;
+}
+.hover_botbox{
+  padding: 1rem;
+  background-color: rgb(245,245,245);
+}
+.hover_bigbig{
+  position: absolute;
+  display: none;
+  z-index: 2;
+  padding-left: 1.5rem;
+  width: 20rem;
+  font-size: 0.8rem;
+}
+.hover_topfilmname{
+  display: inline-block;
+  font-size: 1.2rem;
+  color: rgb(102,102,153);
+  cursor: pointer;
+}
+.hover_topfilmname>span{
+  margin-left: 0.5rem;
+}
+.hover_toptag{
+  display: flex;
+  flex-wrap: wrap;
+}
+.hover_topwant{
+  display: flex;
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+}
+.hover_topwant>div{
+  cursor: pointer;
+  padding: 0.15rem 0.7rem 0.15rem 0.7rem;
+  border: 1px solid rgb(187,187,187) ;
+  margin-right: 0.5rem;
+}
+.hover_botbox>span{
+  color: rgb(187,170,177);
+  margin-left: 0.5rem;
+}
+.hover_toptag>div{
+  padding: 0.2rem 0.5rem 0.2rem 0.5rem;
+  background-color: rgb(245,245,245);
+  border-radius: 1rem;
+  margin-right: 0.5rem;
+  margin-top: 0.4rem;
+}
+.hover_topstars{
+  margin-top: 0.3rem;
+  margin-bottom: 0.5rem;
+}
+.hover_topfilmname:hover{
+  background-color: rgb(51,119,170);
+  color: white;
+}
+.filmsSmallbox>img{
+  height: 10rem;
+  width: 7.7rem;
+}
+.filmnamebiu span{
+  color: rgb(224,144,21);
+  margin-left: 0.2rem;
+}
+.filmnamebiu{
+  text-align: center;
+  color:rgb(51,119,189);
+}
+.row_2{
+  display: flex;
+  margin-top: 0.8rem;
+}
+.row_3{
+  margin-top: 0.5rem;
+  display: flex;
+}
+.row_4{
+  margin-top: 0.5rem;
+}
+.hover_filmplace{
+  margin-left: 0.5rem;
+}
+.hover_filmactor{
+  margin-top: 0.2rem;
+}
+.row_4 span{
+  margin-left: 0.5rem;
 }
 #left_02 {
   height: 33rem;
+  margin-bottom: 3rem;
+  overflow: hidden;
 }
 #left_03 {
   height: 33rem;
+  margin-bottom: 3rem;
+  overflow: hidden;
 }
 
 #left_05 {
   height: 10rem;
+}
+.arrowheads{
+  top:13rem;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+.circle{
+  position: relative;
+  height: 0.4rem;
+  width: 0.4rem;
+  background-color: rgb(216,216,216);
+  cursor: pointer;
+  border-radius: 0.5rem;
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+  top:0.9rem;
+}
+.arrowheads>div[class = "arrowhead"]{
+  margin: 0.5rem 0.5rem 0.5rem 0.5rem;
 }
 .right_box {
   width: 20.6rem;
@@ -347,20 +406,22 @@
   margin-left: 0.9rem;
 }
 .rec_box{
-  position: relative;
+  position: absolute;
   display: flex;
   margin-top: 1rem;
   background-color: rgb(249,249,249);
   left:0rem;
   right:0rem;
+  margin-left: 0.1rem;
 }
 .rec_box_remove{
-  transition:left 0.5s ease-in-out;
+  transition:left 1.5s ease-in-out;
 }
 .rec_title{
   font-size: 1.2rem;
   margin-top: 3rem;
   margin-left: 2rem;
+  width: inherit;
 }
 .rec_content{
   position: relative;
@@ -375,7 +436,131 @@
   position: relative;
   display: flex;
   right: 45.1rem;
+  height: 17.2rem;
+  
 }
 .rec_right{
   width: 22rem;
+}
+#recommend_box{
+  overflow: hidden;
+}
+#commentboxborder{
+  display: none;
+  position: fixed;
+  width: 33rem;
+  height: 20rem;
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 0.3rem;
+  z-index: 999;
+  top:13rem;
+  left: 30rem;
+}
+#commentbox{
+  position: relative;
+  width: 32rem;
+  border-radius: 0.1rem;
+  height: 19rem;
+  background-color: white;
+  left: 0.5rem;
+  top:0.5rem;
+  font-size: 0.8rem;
+}
+
+#commentbox_title{
+  background-color: rgb(235,245,234);
+  color: rgb(0,119,92);
+  height: 3rem;
+  padding-left: 1rem;
+}
+#commentbox_close{
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  color: rgb(191,208,221);
+  left:22rem;
+  top:0.6rem;
+  font-size: 0.8rem;
+  padding: 0.1rem 0.2rem 0.1rem 0.2rem;
+}
+#title_contg{
+  position: relative;
+  display: inline-block;
+  top:0.7rem;
+
+}
+#commentbox_close:hover{
+  background-color: brown;
+  color: white;
+}
+#comment_row1{
+  padding-left: 1rem;
+  padding-top: 1rem;
+  font-size: 0.9rem;
+  display: flex;
+}
+#comment_row1>input{
+  margin-right: 0.3rem;
+}
+#comment_star{
+  display: flex;
+  margin-left: 0.5rem;
+}
+.jdsa{
+  margin-right: 1rem;
+}
+#comment_stars{
+  display: flex;
+}
+#comment_row2{
+  margin-left: 1rem;
+  margin-top: 0.5rem;
+}
+#comment_tag{
+  margin-left: 1rem;
+}
+.input{
+  outline: none;
+  border: 1px solid rgb(204,204,204);
+  padding-left: 0.2rem;
+  height: 1.2rem;
+}
+#comment_row3{
+  margin-left: 1rem;
+  margin-top: 1.5rem;
+}
+#comment_row3 span{
+  display: block;
+  float: right;
+  margin-right: 2rem;
+}
+#short_comment{
+  margin-left: 1rem;
+  height: 3rem;
+  width: 29rem;
+}
+#save{
+  margin-top: 2rem;
+  background-color: rgb(233,238,242);
+  height: 3rem;
+}
+#save button{
+  float: right;
+  margin-top: 0.8rem;
+  margin-right: 1rem;
+}
+#eva1_star img{
+  margin-top: 0.1rem;
+  width:1rem;
+  height: 1rem;
+  
+}
+#eva1_star{
+  margin-left: 0.5rem;
+  display: flex;
+}
+
+#eva1_score{
+  line-height: 1.1rem;
+  font-size: 0.7rem;
 }
